style: change de squares styles css to js

--- a/reto-clase-cuadrados/index.html
+++ b/reto-clase-cuadrados/index.html
@@ -11,11 +11,11 @@
 
 <body>
     <div class="squares">
-        <div class="container initialWhite"></div>
-        <div class="container initialBlack"></div>
-        <div class="container initialWhite"></div>
-        <div class="container initialBlack"></div>
-        <div class="container initialWhite"></div>
+        <div class="container"></div>
+        <div class="container"></div>
+        <div class="container"></div>
+        <div class="container"></div>
+        <div class="container"></div>
         <!-- <div class="container black" onclick="getContainer()"></div> -->
         <!-- <span id="responseContainer"></span> -->
     </div>
